--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,4 +10,5 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+@import url('./1-timer.css');
 @import url('./2-snackbar.css');
